overflow fix

--- a/styles.css
+++ b/styles.css
@@ -386,6 +386,7 @@ article {
   margin: 10px;
   height: 140px;
   width: 100%;
+  overflow: hidden;
 }
 
 .thumbnail_picture_popular {
@@ -537,6 +538,16 @@ display: flex;
     height: 50%;
   }
 
+  .thumbnail_text {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .thumbnail_text h3 {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+  }
   
 }
 
@@ -663,6 +674,11 @@ display: flex;
     align-content: space-between;
   }
   
+  .thumbnail_text h3 {
+    text-overflow: unset;
+    overflow: unset;
+    white-space: unset;
+  }
 } 
   
 
